# QFileMatrix

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_app.bat  configure_app.bat  deploy_app.bat  run_app.bat  test_output.txt
docs/plans/: 2026-04-23-shell-refinement-followup.md  2026-05-01-bin-runtime-environment-design.md  2026-05-01-bin-runtime-environment-plan.md
src/: main.cpp
src/app/: AppController.cpp  AppController.h  AppTypes.h  MainWindow.cpp  MainWindow.h
src/dialogs/: AlarmCenterDialog.cpp  AlarmCenterDialog.h  ManualSampleDialog.cpp  ManualSampleDialog.h
src/domain/: MeasurementConstants.h  MeasurementRecord.h  MeasurementSimulator.cpp  MeasurementSimulator.h  MeasurementSpec.cpp  MeasurementSpec.h  ProfileData.cpp  ProfileData.h
src/models/: MeasurementTableModel.cpp  MeasurementTableModel.h
src/panels/: BottomStatusBar.cpp  BottomStatusBar.h  DeviceStatusBar.cpp  DeviceStatusBar.h  HistoryPanel.cpp  HistoryPanel.h  MeasureControlPanel.cpp  MeasureControlPanel.h  SensorPanel.cpp  SensorPanel.h  ServoControlPanel.cpp  ServoControlPanel.h  TopTitleBar.cpp  TopTitleBar.h
src/theme/: Theme.cpp  Theme.h
src/widgets/: CameraViewWidget.cpp  CameraViewWidget.h  DpadControlWidget.cpp  DpadControlWidget.h  LedIndicatorWidget.cpp  LedIndicatorWidget.h  PanelHeaderWidget.cpp  PanelHeaderWidget.h  ProfileChartWidget.cpp  ProfileChartWidget.h  RailIconButton.cpp  RailIconButton.h  SensorGaugeWidget.cpp  SensorGaugeWidget.h  SmallIconButton.cpp  SmallIconButton.h  StatCardWidget.cpp  StatCardWidget.h  VerdictPillWidget.cpp  VerdictPillWidget.h
tests/: AppControllerTests.cpp  MainWindowTests.cpp  MeasurementSimulatorTests.cpp  MeasurementSpecTests.cpp  MeasurementTableModelTests.cpp  VisualizationWidgetTests.cpp  WidgetPanelSmokeTests.cpp
